WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
264865
[WebGPU] ArrayBuffer detaching on unmap is not implemented
https://bugs.webkit.org/show_bug.cgi?id=264865
Summary
[WebGPU] ArrayBuffer detaching on unmap is not implemented
Mike Wyrzykowski
Reported
2023-11-14 23:05:51 PST
[WebGPU] ArrayBuffer detaching on unmap is not implemented Per the spec, the ArrayBuffer returned from getMappedRange should be unmapped on the call to GPUBuffer.unmap
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-11-14 23:06:11 PST
<
rdar://problem/118439123
>
Mike Wyrzykowski
Comment 2
2023-11-14 23:38:06 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20526
EWS
Comment 3
2023-11-15 22:00:14 PST
Committed
270806@main
(1007b7a34ee9): <
https://commits.webkit.org/270806@main
> Reviewed commits have been landed. Closing PR #20526 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug