[WebGPU] ArrayBuffer detaching on unmap is not implemented https://bugs.webkit.org/show_bug.cgi?id=264865 radar://118439123

Reviewed by Dan Glastonbury.

Per section 5.2 of the WebGPU specification, ArrayBuffer instances
returned via GPUBuffer.getMappedRange should be detached after unmap
is called.

Enabling tests tracked by https://bugs.webkit.org/show_bug.cgi?id=264552
as mapping via postMessage and out of memory mapping tests still fail.

* Source/WebCore/Modules/WebGPU/GPUBuffer.cpp:
(WebCore::GPUBuffer::~GPUBuffer):
(WebCore::GPUBuffer::GPUBuffer):
(WebCore::makeArrayBuffer):
(WebCore::GPUBuffer::getMappedRange):
(WebCore::GPUBuffer::unmap):
(WebCore::GPUBuffer::internalUnmap):
(WebCore::GPUBuffer::destroy):
* Source/WebCore/Modules/WebGPU/GPUBuffer.h:
(WebCore::GPUBuffer::create):
* Source/WebCore/Modules/WebGPU/GPUBuffer.idl:
* Source/WebCore/Modules/WebGPU/GPUDevice.cpp:
(WebCore::GPUDevice::addBufferToUnmap):
(WebCore::GPUDevice::removeBufferToUnmap):
(WebCore::GPUDevice::destroy):
(WebCore::GPUDevice::createBuffer):
* Source/WebCore/Modules/WebGPU/GPUDevice.h:
* Source/WebCore/Modules/WebGPU/GPUDevice.idl:

Canonical link: https://commits.webkit.org/270806@main